# skypilot

./: README.md
.buildkite/: generate_pipeline.py  test_buildkite_pipeline_generation.py
.github/workflows/: nightly-build.yml  release-publish.yml
charts/skypilot/: values.schema.json  values.yaml
docs/source/: conf.py  frontier-ai.rst  index.rst  llms.txt.template  overview.rst  sandboxes.rst  sky-computing.rst  skypilot-platform.rst
examples/: containerized_app.py  example_app.py  horovod_distributed_tf_app.py  huggingface_glue_imdb_grid_search_app.py  ray_tune_app.py  resnet_app.py  resnet_app_storage.py  resnet_app_storage.yaml  resnet_distributed_tf_app.py  resnet_distributed_torch_app.py  tensorboard_app.py  time_estimators.py  timm_app.py
examples/autoresearch/: README.md
examples/deepseek-ocr/: README.md
examples/redisvl-vector-search/: README.md
examples/vector_database/: README.md
llm/batch_inference/: README.md
llm/slime/: .skyignore  README.md  coding-agent-2engine.yaml  coding-agent-3engine.yaml  coding-agent.yaml  policy-volume.yaml  pyproject.toml  run-slime.sh
llm/slime/benchmark/: README.md  metrics.json
llm/slime/code/: dataset_swesmith.py  generate.py  pool_cleanup.py  rollout_metrics.py  sandbox_env.py
llm/slime/scripts/: engine-run.sh  engine-setup.sh  trainer-run.sh  trainer-setup.sh
sky/: core.py  exceptions.py  execution.py  global_user_state.py  resources.py  sky_logging.py  skypilot_config.py
tests/: conftest.py  test_config.py  test_jobs_and_serve.py  test_no_parellel.py  test_optimizer_dryruns.py
(+195 files in other folders)
